align filter bands by genre text with genres correctly

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -136,7 +136,9 @@ main {
 
 
 p.filter_genre {
-  text-align: left;
+  text-align: right;
+  margin-right: 70px;
+
 
 }
 
